@@ -4,13 +4,22 @@ module DatabaseCleaner
   module MongoMapper
     class Truncation < DatabaseCleaner::TruncationBase
       def clean
-        connection.db(database).collections.each { |c| c.remove }
+        if @only
+          collections.each { |c| c.remove if @only.include?(c.name) }
+        else
+          collections.each { |c| c.remove unless @tables_to_exclude.include?(c.name) }
+        end
+        true
       end
 
       private
 
       def connection
         ::MongoMapper.connection
+      end
+
+      def collections
+        connection.db(database).collections
       end
 
       def database
